AuthBridge/keycloak-client-registration/spire-oidc-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: spire-oidc
  namespace: spire-server
  labels:
    app: spire-oidc
spec:
  parentRefs:
    - name: http
      namespace: kagenti-system
  hostnames:
    - "spire-oidc.localtest.me"
  rules:
    - backendRefs:
        - name: spire-spiffe-oidc-discovery-provider
          port: 80
