AuthBridge/keycloak-client-registration/spire-tornjak-api-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: spire-tornjak-api
  namespace: spire-server
  labels:
    app: spire-tornjak-api
spec:
  parentRefs:
    - name: http
      namespace: kagenti-system
  hostnames:
    - "spire-tornjak-api.localtest.me"
  rules:
    - backendRefs:
        - name: spire-tornjak-backend
          port: 10000
