AuthBridge/keycloak-client-registration/spire-tornjak-ui-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: spire-tornjak-ui
  namespace: spire-server
  labels:
    app: spire-tornjak-ui
spec:
  parentRefs:
    - name: http
      namespace: kagenti-system
  hostnames:
    - "spire-tornjak-ui.localtest.me"
  rules:
    - backendRefs:
        - name: spire-tornjak-frontend
          port: 3000
